2003-11-11  JP Rosevear <jpr@ximian.com>

	* main.c (kill_dataserver): kill the right thing
	(kill_old_dataserver): rename and check the version correctly

2003-11-10  Ettore Perazzoli  <ettore@ximian.com>

	* main.c: Added a new "-c" command-line arg.
	(idle_cb): If the arg is specified, open the component with that
	id/alias.

	* e-shell.c (impl_Shell_createNewView): New, implementation for
	the Shell::createNewView() CORBA method.
	(e_shell_class_init): Install.
	(e_shell_create_window): Get a component_id arg.

	* e-shell-window.c (e_shell_window_new): Get a component_id arg
	and create the window with that component activated if not NULL.

	* Evolution-Shell.idl (createNewView): Remove.
	(createNewWindow): New.

2003-11-10  Ettore Perazzoli  <ettore@ximian.com>

	* e-shell-window.c (struct _ComponentView): New member
	"component_alias".
	(component_view_new): Get a new "alias" arg, set the member in the
	struct accordingly.
	(component_view_free): Free ->component_alias.
	(setup_widgets): Pass the alias from the ComponentInfo to
	e_component_view().
	(switch_view): New utility function.
	(sidebar_button_selected_callback): Use it.
	(e_shell_window_switch_to_component): New public function.
	(e_shell_window_new): Switch to the component whose id is in the
	/apps/evolution/shell/view_defaults/component_id GConf key.

	* apps_evolution_shell.schemas: Removed view_defaults/folder_path.
	New key view_defaults/component_id.

	* e-component-registry.c (component_info_free): Free ->alias.
	(component_info_new): Get an "alias" arg and set the member
	accordingly.
	(query_components): Remove debugging messages.  Get an
	"evolution:component_alias" property from the component and set
	the alias from that.

	* e-component-registry.h (struct _EComponentInfo): New member
	"alias".

2003-11-07  JP Rosevear <jpr@ximian.com>

	* Makefile.am: don't include top level libical

2003-11-07  JP Rosevear <jpr@ximian.com>
